# nano_mind

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp
include/: parameter.h  sgd_optimizer.h
lib/: CMakeLists.txt
lib/algorithms/: CMakeLists.txt
lib/algorithms/include/: topological_sort.h
lib/core/: CMakeLists.txt
lib/core/include/: model.h  neuron.h  parameter.h
lib/core/src/: model.cpp  neuron.cpp  parameter.cpp
lib/layers/: CMakeLists.txt
lib/layers/include/: layer.h  linear_layer.h  relu_layer.h  sigmoid_layer.h  softmax.h
lib/layers/src/: linear_layer.cpp  relu_layer.cpp  sigmoid_layer.cpp  softmax.cpp
lib/loss_functions/: CMakeLists.txt
lib/loss_functions/include/: cross_entropy_loss.h  mse_loss.h
lib/loss_functions/src/: cross_entropy_loss.cpp  mse_loss.cpp
lib/utils/: CMakeLists.txt
lib/utils/include/: utils.h
lib/utils/src/: utils.cpp
src/: model.cpp  neuron.cpp  parameter.cpp  sgd_optimizer.cpp  tests.cpp  topological_sort.cpp
tests/: CMakeLists.txt
tests/src/: activations.cpp  arithmetic_functions.cpp  derivatives.cpp  losses.cpp  neuron.cpp
